# odd-mongo-adaptor

./: README.md
odd_mongo_adapter/: Dockerfile  README.md  pyproject.toml
odd_mongo_adapter/docker/: .env  docker-compose.yml
odd_mongo_adapter/odd_mongo_adapter/: adapter.py  cache.py  config.py  controllers.py  scheduler.py  wsgi.py
odd_mongo_adapter/odd_mongo_adapter/mappers/: columns.py  schemas.py
