[tool.poetry]
name = "odd_mongo_adapter"
version = "0.1.0"
description = ""
authors = ["kamil-sabbagh <kamil.mousa9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
gunicorn = "^20.1.0"
APScheduler = "^3.7.0"
pymongo = "^4.0.1"
dnspython="^2.2.0"
odd-models = "^1.0.14"
oddrn-generator = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
